--- a/code/main15Percent.ipynb
+++ b/code/main15Percent.ipynb
@@ -213,13 +213,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "notebookRunGroups": {
      "groupValue": "1"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "         SAPPE       UNH        VZ        ENB       PTT        UL       KTB      MSFT       SAT      TSMC       SCB       JPM      Visa  META       TOP      BMWG        AP      ABBV       KBS       NVDA  Cpaxt     APPLE       AVGO        LH       SIRI       CVX        ORI       PSEC       KCE       HCA     TISCO  AMZN      ICHI         O\n",
+      "2562  3.316583  1.500102  5.546715  11.800000  4.540598  3.061825  3.829787  0.658710  8.638957  2.924083  4.892368  3.490401  0.621272   0.0  3.082437  4.785343  5.369128  4.833973  3.738318  17.927171    0.0  1.394495  35.443038  6.632653   7.339450  4.883554  10.161871  11.180124  1.665973  0.299536  7.045862   0.0  0.990099  3.807989\n",
+      "2563  4.300518  1.377324  5.432640  13.556485  4.709660  3.186319  6.756757  0.272123  8.196721  1.279742  4.910479  3.824092  1.015658   0.0  0.961538  3.461166  6.206897  4.405040  2.238806  10.865874    0.0  0.687715  30.486412  7.547170   4.938272  7.148795   4.341317  13.308688  2.820874  0.346942  8.754384   0.0  3.783784  4.649734\n",
+      "2564  3.885714  1.115227  5.564074  10.918601  2.618844  3.565167  2.121212  0.221206  2.761855  1.255834  3.779628  2.679264  0.590297   0.0  2.626263  2.147135  5.235602  3.840473  0.000000   3.086420    0.0  0.147483  22.392546  6.250000   4.878049  5.030791   5.700935   8.561237  1.458435  0.191647  6.554433   0.0  5.000000  3.974019\n",
+      "2565  2.485876  1.207137  6.429105   9.606255  6.027060  3.687375  2.372881  0.254972  7.135678  1.927483  6.031374  3.336670  0.737608   0.0  7.111111  6.956105  5.603448  3.489883  0.000000   0.654397    0.0  0.148944  30.227151  5.050505   8.522727  3.395911   4.710744  10.300429  1.156738  0.257507  7.204030   0.0  4.424779  4.680750\n",
+      "2566  1.907514  1.384694  7.827381  10.695993  4.195804  3.836634  3.695652  0.211429  8.287293  1.394231  9.841995  2.944979  0.774427   0.0  4.372093  8.434213  6.194690  3.820094  9.090909   0.819252    0.0  0.148249  17.065305  6.748466  11.299435  4.181088   8.639053  12.020033  1.276867  0.265322  9.774436   0.0  7.006369  5.327412\n",
+      "Shape of you (5, 34)\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -259,9 +273,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total number of combinations : 278256\n",
+      "First 5 combinations :\n",
+      "[['SAPPE' 'UNH' 'VZ' 'ENB' 'PTT']\n",
+      " ['SAPPE' 'UNH' 'VZ' 'ENB' 'UL']\n",
+      " ['SAPPE' 'UNH' 'VZ' 'ENB' 'KTB']\n",
+      " ['SAPPE' 'UNH' 'VZ' 'ENB' 'MSFT']\n",
+      " ['SAPPE' 'UNH' 'VZ' 'ENB' 'SAT']]\n"
+     ]
+    }
+   ],
    "source": [
     "# Choose 5 stocks from 34 to analyze by permutation\n",
     "import itertools\n",
@@ -340,9 +368,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 278256/278256 [00:18<00:00, 15420.66it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "All possible combinations have been analyzed!\n"
+     ]
+    }
+   ],
    "source": [
     "H_matrices = {}\n",
     "\n",
@@ -361,9 +404,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Selected Dividend:\n",
+      "[[ 3.83   3.738  0.     7.339  1.666]\n",
+      " [ 6.757  2.239  0.     4.938  2.821]\n",
+      " [ 2.121  0.     0.     4.878  1.458]\n",
+      " [ 2.373  0.     0.     8.523  1.157]\n",
+      " [ 3.696  9.091  0.    11.299  1.277]]\n",
+      "Mean_values:\n",
+      "[3.755 3.014 0.    7.396 1.676]\n",
+      "Covariance_matrix:\n",
+      "[[ 3.4    1.614  0.    -1.264  1.133]\n",
+      " [ 1.614 14.056  0.     7.445 -0.275]\n",
+      " [ 0.     0.     0.     0.     0.   ]\n",
+      " [-1.264  7.445  0.     7.223 -1.102]\n",
+      " [ 1.133 -0.275  0.    -1.102  0.447]]\n",
+      "Bordered_hessian:\n",
+      "[[ 3.4    1.614  0.    -1.264  1.133 -1.     0.     0.     0.     0.     1.     3.755]\n",
+      " [ 1.614 14.056  0.     7.445 -0.275  0.    -1.     0.     0.     0.     1.     3.014]\n",
+      " [ 0.     0.     0.     0.     0.     0.     0.    -1.     0.     0.     1.     0.   ]\n",
+      " [-1.264  7.445  0.     7.223 -1.102  0.     0.     0.    -1.     0.     1.     7.396]\n",
+      " [ 1.133 -0.275  0.    -1.102  0.447  0.     0.     0.     0.    -1.     1.     1.676]\n",
+      " [ 1.     1.     1.     1.     1.     0.     0.     0.     0.     0.     0.     0.   ]\n",
+      " [ 3.755  3.014  0.     7.396  1.676  0.     0.     0.     0.     0.     0.     0.   ]]\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "len of H_matrices : 278256\n",
+      "Structure of H_matrices : \n",
+      "(array([[ 3.4  ,  1.614,  0.   , -1.264,  1.133, -1.   ,  0.   ,  0.   ,  0.   ,  0.   ,  1.   ,  3.755],\n",
+      "       [ 1.614, 14.056,  0.   ,  7.445, -0.275,  0.   , -1.   ,  0.   ,  0.   ,  0.   ,  1.   ,  3.014],\n",
+      "       [ 0.   ,  0.   ,  0.   ,  0.   ,  0.   ,  0.   ,  0.   , -1.   ,  0.   ,  0.   ,  1.   ,  0.   ],\n",
+      "       [-1.264,  7.445,  0.   ,  7.223, -1.102,  0.   ,  0.   ,  0.   , -1.   ,  0.   ,  1.   ,  7.396],\n",
+      "       [ 1.133, -0.275,  0.   , -1.102,  0.447,  0.   ,  0.   ,  0.   ,  0.   , -1.   ,  1.   ,  1.676],\n",
+      "       [ 1.   ,  1.   ,  1.   ,  1.   ,  1.   ,  0.   ,  0.   ,  0.   ,  0.   ,  0.   ,  0.   ,  0.   ],\n",
+      "       [ 3.755,  3.014,  0.   ,  7.396,  1.676,  0.   ,  0.   ,  0.   ,  0.   ,  0.   ,  0.   ,  0.   ]]),\n",
+      " array([[ 3.4  ,  1.614,  0.   , -1.264,  1.133],\n",
+      "       [ 1.614, 14.056,  0.   ,  7.445, -0.275],\n",
+      "       [ 0.   ,  0.   ,  0.   ,  0.   ,  0.   ],\n",
+      "       [-1.264,  7.445,  0.   ,  7.223, -1.102],\n",
+      "       [ 1.133, -0.275,  0.   , -1.102,  0.447]]))\n"
+     ]
+    }
+   ],
    "source": [
     "import pprint\n",
     "ll = process_combination(('KTB', 'KBS', 'Cpaxt', 'SIRI', 'KCE'), dividend_yield_matrix, stocks)\n",
@@ -425,9 +512,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Running the computation...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Processing tasks: 100%|██████████| 8904192/8904192 [15:45<00:00, 9420.35it/s] \n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Filtering out None results...\n",
+      "Successfully filtered out None results!\n",
+      "Filtering valid solutions... (lampda>=0, c>=0)\n",
+      "Total number of valid solutions: 22588\n",
+      "Saving valid solutions to ../out/raw_data/valid_solutions15Percent.pkl...\n"
+     ]
+    }
+   ],
    "source": [
     "import pickle\n",
     "import os\n",
@@ -503,7 +616,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -540,7 +653,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -564,9 +677,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Combination : ('SAPPE', 'UNH', 'VZ', 'SCB', 'AVGO')\n",
+      "Number of valid solutions :\n",
+      "[(array([[0.   ],\n",
+      "       [0.   ],\n",
+      "       [0.   ],\n",
+      "       [0.571],\n",
+      "       [0.429]]), 2.5726313626765234, (array([[ 9.683e-01, -1.492e-02, -9.070e-01, -1.963e+00,  3.053e+00],\n",
+      "       [-1.492e-02,  2.363e-02,  1.184e-02,  1.090e-01,  4.147e-01],\n",
+      "       [-9.070e-01,  1.184e-02,  1.028e+00,  2.302e+00, -5.166e+00],\n",
+      "       [-1.963e+00,  1.090e-01,  2.302e+00,  5.512e+00, -1.023e+01],\n",
+      "       [ 3.053e+00,  4.147e-01, -5.166e+00, -1.023e+01,  5.343e+01]]), (0, 0, 0, 1, 1), array([[ 0.571],\n",
+      "       [ 0.429],\n",
+      "       [ 3.771],\n",
+      "       [ 5.429],\n",
+      "       [ 0.108],\n",
+      "       [ 6.326],\n",
+      "       [-0.863]]), {'c4': 0.5709800974185708, 'c5': 0.4290199025814292, 'lambda1': 3.7712137764337603, 'lambda2': 5.429415165946394, 'lambda3': 0.10817665538560507}, {'mu1': -0.8629384768475806, 'mu2': 6.325645024486845}))]\n",
+      "          0         1         2          3          4\n",
+      "0  0.968318 -0.014918 -0.906962  -1.962533   3.052599\n",
+      "1 -0.014918  0.023633  0.011845   0.109014   0.414728\n",
+      "2 -0.906962  0.011845  1.028219   2.302362  -5.166158\n",
+      "3 -1.962533  0.109014  2.302362   5.511661 -10.230242\n",
+      "4  3.052599  0.414728 -5.166158 -10.230242  53.426438\n",
+      "   0\n",
+      "0  0\n",
+      "1  0\n",
+      "2  0\n",
+      "3  1\n",
+      "4  1\n",
+      "          0\n",
+      "0  0.570980\n",
+      "1  0.429020\n",
+      "2  3.771214\n",
+      "3  5.429415\n",
+      "4  0.108177\n",
+      "5  6.325645\n",
+      "6 -0.862938\n",
+      "        c4       c5   lambda1   lambda2   lambda3\n",
+      "0  0.57098  0.42902  3.771214  5.429415  0.108177\n",
+      "        mu1       mu2\n",
+      "0 -0.862938  6.325645\n"
+     ]
+    }
+   ],
    "source": [
     "for combination, solution_list in valid_solutions_with_risk.items():\n",
     "    print(f\"Combination : {combination}\")\n",
@@ -583,9 +744,95 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                          Combination  \\\n",
+      "0         (SAPPE, UNH, VZ, SCB, AVGO)   \n",
+      "1          (SAPPE, UNH, VZ, AVGO, LH)   \n",
+      "2         (SAPPE, UNH, VZ, AVGO, CVX)   \n",
+      "3         (SAPPE, UNH, VZ, AVGO, ORI)   \n",
+      "4         (SAPPE, UNH, VZ, AVGO, KCE)   \n",
+      "...                               ...   \n",
+      "22595  (AVGO, KCE, TISCO, AMZN, ICHI)   \n",
+      "22596      (AVGO, KCE, AMZN, ICHI, O)   \n",
+      "22597  (AVGO, HCA, TISCO, AMZN, ICHI)   \n",
+      "22598      (AVGO, HCA, AMZN, ICHI, O)   \n",
+      "22599    (AVGO, TISCO, AMZN, ICHI, O)   \n",
+      "\n",
+      "                                                  myPort      Risk  \\\n",
+      "0      [0.0, 0.0, 0.0, 0.5709800974185708, 0.42901990...  2.572631   \n",
+      "1      [0.0, 0.0, 0.5783019619974314, 0.4216980380025...  2.706460   \n",
+      "2      [0.0, 0.0, 0.5783019619974314, 0.4216980380025...  2.706460   \n",
+      "3      [0.0, 0.0, 0.5783019619974314, 0.4216980380025...  2.706460   \n",
+      "4      [0.0, 0.0, 0.5783019619974314, 0.4216980380025...  2.706460   \n",
+      "...                                                  ...       ...   \n",
+      "22595  [0.42985860212054183, 0.0, 0.2545821982240466,...  2.378747   \n",
+      "22596  [0.47019702155304594, 0.0, 0.0, 0.529802978446...  2.397199   \n",
+      "22597  [0.42985860212054183, 0.0, 0.2545821982240466,...  2.378747   \n",
+      "22598  [0.47019702155304594, 0.0, 0.0, 0.529802978446...  2.397199   \n",
+      "22599  [0.42985860212054183, 0.2545821982240466, 0.0,...  2.378747   \n",
+      "\n",
+      "                                       Covariance Matrix          ci_case  \\\n",
+      "0      [[0.9683183910391886, -0.014918337430515672, -...  (0, 0, 0, 1, 1)   \n",
+      "1      [[0.9683183910391886, -0.014918337430515672, -...  (0, 0, 1, 1, 0)   \n",
+      "2      [[0.9683183910391886, -0.014918337430515672, -...  (0, 0, 1, 1, 0)   \n",
+      "3      [[0.9683183910391886, -0.014918337430515672, -...  (0, 0, 1, 1, 0)   \n",
+      "4      [[0.9683183910391886, -0.014918337430515672, -...  (0, 0, 1, 1, 0)   \n",
+      "...                                                  ...              ...   \n",
+      "22595  [[53.426437951615384, 1.7997312781692008, -4.7...  (1, 0, 1, 0, 1)   \n",
+      "22596  [[53.426437951615384, 1.7997312781692008, 0.0,...  (1, 0, 0, 1, 0)   \n",
+      "22597  [[53.426437951615384, 0.2208590820171688, -4.7...  (1, 0, 1, 0, 1)   \n",
+      "22598  [[53.426437951615384, 0.2208590820171688, 0.0,...  (1, 0, 0, 1, 0)   \n",
+      "22599  [[53.426437951615384, -4.720148113959482, 0.0,...  (1, 1, 0, 1, 0)   \n",
+      "\n",
+      "                                               x_reduced  \\\n",
+      "0      [[0.5709800974185708], [0.4290199025814292], [...   \n",
+      "1      [[0.5783019619974314], [0.42169803800256855], ...   \n",
+      "2      [[0.5783019619974314], [0.42169803800256855], ...   \n",
+      "3      [[0.5783019619974314], [0.42169803800256855], ...   \n",
+      "4      [[0.5783019619974314], [0.42169803800256855], ...   \n",
+      "...                                                  ...   \n",
+      "22595  [[0.42985860212054183], [0.2545821982240466], ...   \n",
+      "22596  [[0.47019702155304594], [0.5298029784469539], ...   \n",
+      "22597  [[0.42985860212054183], [0.2545821982240466], ...   \n",
+      "22598  [[0.47019702155304594], [0.5298029784469539], ...   \n",
+      "22599  [[0.42985860212054183], [0.2545821982240466], ...   \n",
+      "\n",
+      "                                                 checker  \\\n",
+      "0      {'c4': 0.5709800974185708, 'c5': 0.42901990258...   \n",
+      "1      {'c3': 0.5783019619974314, 'c4': 0.42169803800...   \n",
+      "2      {'c3': 0.5783019619974314, 'c4': 0.42169803800...   \n",
+      "3      {'c3': 0.5783019619974314, 'c4': 0.42169803800...   \n",
+      "4      {'c3': 0.5783019619974314, 'c4': 0.42169803800...   \n",
+      "...                                                  ...   \n",
+      "22595  {'c1': 0.42985860212054183, 'c3': 0.2545821982...   \n",
+      "22596  {'c1': 0.47019702155304594, 'c4': 0.5298029784...   \n",
+      "22597  {'c1': 0.42985860212054183, 'c3': 0.2545821982...   \n",
+      "22598  {'c1': 0.47019702155304594, 'c4': 0.5298029784...   \n",
+      "22599  {'c1': 0.42985860212054183, 'c2': 0.2545821982...   \n",
+      "\n",
+      "                                               mu_values  \n",
+      "0      {'mu1': -0.8629384768475806, 'mu2': 6.32564502...  \n",
+      "1      {'mu1': -1.007787809750816, 'mu2': 7.791893692...  \n",
+      "2      {'mu1': -1.007787809750816, 'mu2': 7.791893692...  \n",
+      "3      {'mu1': -1.007787809750816, 'mu2': 7.791893692...  \n",
+      "4      {'mu1': -1.007787809750816, 'mu2': 7.791893692...  \n",
+      "...                                                  ...  \n",
+      "22595  {'mu1': -0.9418702562021611, 'mu2': 8.46961744...  \n",
+      "22596  {'mu1': -0.9489773096953676, 'mu2': 8.48809422...  \n",
+      "22597  {'mu1': -0.9418702562021611, 'mu2': 8.46961744...  \n",
+      "22598  {'mu1': -0.9489773096953676, 'mu2': 8.48809422...  \n",
+      "22599  {'mu1': -0.9418702562021611, 'mu2': 8.46961744...  \n",
+      "\n",
+      "[22600 rows x 8 columns]\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -615,7 +862,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
