fix my linear logic error

--- a/code/main10Percent.ipynb
+++ b/code/main10Percent.ipynb
@@ -213,27 +213,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "notebookRunGroups": {
      "groupValue": "1"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "         SAPPE       UNH        VZ        ENB       PTT        UL       KTB      MSFT       SAT      TSMC       SCB       JPM      Visa  META       TOP      BMWG        AP      ABBV       KBS       NVDA  Cpaxt     APPLE       AVGO        LH       SIRI       CVX        ORI       PSEC       KCE       HCA     TISCO  AMZN      ICHI         O\n",
-      "2562  3.316583  1.500102  5.546715  11.800000  4.540598  3.061825  3.829787  0.658710  8.638957  2.924083  4.892368  3.490401  0.621272   0.0  3.082437  4.785343  5.369128  4.833973  3.738318  17.927171    0.0  1.394495  35.443038  6.632653   7.339450  4.883554  10.161871  11.180124  1.665973  0.299536  7.045862   0.0  0.990099  3.807989\n",
-      "2563  4.300518  1.377324  5.432640  13.556485  4.709660  3.186319  6.756757  0.272123  8.196721  1.279742  4.910479  3.824092  1.015658   0.0  0.961538  3.461166  6.206897  4.405040  2.238806  10.865874    0.0  0.687715  30.486412  7.547170   4.938272  7.148795   4.341317  13.308688  2.820874  0.346942  8.754384   0.0  3.783784  4.649734\n",
-      "2564  3.885714  1.115227  5.564074  10.918601  2.618844  3.565167  2.121212  0.221206  2.761855  1.255834  3.779628  2.679264  0.590297   0.0  2.626263  2.147135  5.235602  3.840473  0.000000   3.086420    0.0  0.147483  22.392546  6.250000   4.878049  5.030791   5.700935   8.561237  1.458435  0.191647  6.554433   0.0  5.000000  3.974019\n",
-      "2565  2.485876  1.207137  6.429105   9.606255  6.027060  3.687375  2.372881  0.254972  7.135678  1.927483  6.031374  3.336670  0.737608   0.0  7.111111  6.956105  5.603448  3.489883  0.000000   0.654397    0.0  0.148944  30.227151  5.050505   8.522727  3.395911   4.710744  10.300429  1.156738  0.257507  7.204030   0.0  4.424779  4.680750\n",
-      "2566  1.907514  1.384694  7.827381  10.695993  4.195804  3.836634  3.695652  0.211429  8.287293  1.394231  9.841995  2.944979  0.774427   0.0  4.372093  8.434213  6.194690  3.820094  9.090909   0.819252    0.0  0.148249  17.065305  6.748466  11.299435  4.181088   8.639053  12.020033  1.276867  0.265322  9.774436   0.0  7.006369  5.327412\n",
-      "Shape of you (5, 34)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -265,6 +251,18 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# show only ENB, AVGO, LH, ORI, และ ICHI in pd\n",
+    "dividend_yield_df = dividend_yield_df.loc[:, [\"ENB\", \"AVGO\", \"LH\", \"ORI\", \"ICHI\"]]\n",
+    "print(dividend_yield_df.to_string())\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -273,23 +271,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Total number of combinations : 278256\n",
-      "First 5 combinations :\n",
-      "[['SAPPE' 'UNH' 'VZ' 'ENB' 'PTT']\n",
-      " ['SAPPE' 'UNH' 'VZ' 'ENB' 'UL']\n",
-      " ['SAPPE' 'UNH' 'VZ' 'ENB' 'KTB']\n",
-      " ['SAPPE' 'UNH' 'VZ' 'ENB' 'MSFT']\n",
-      " ['SAPPE' 'UNH' 'VZ' 'ENB' 'SAT']]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Choose 5 stocks from 34 to analyze by permutation\n",
     "import itertools\n",
@@ -310,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -368,24 +352,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 278256/278256 [00:16<00:00, 17260.86it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "All possible combinations have been analyzed!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "H_matrices = {}\n",
     "\n",
@@ -404,53 +373,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Selected Dividend:\n",
-      "[[ 3.83   3.738  0.     7.339  1.666]\n",
-      " [ 6.757  2.239  0.     4.938  2.821]\n",
-      " [ 2.121  0.     0.     4.878  1.458]\n",
-      " [ 2.373  0.     0.     8.523  1.157]\n",
-      " [ 3.696  9.091  0.    11.299  1.277]]\n",
-      "Mean_values:\n",
-      "[3.755 3.014 0.    7.396 1.676]\n",
-      "Covariance_matrix:\n",
-      "[[ 3.4    1.614  0.    -1.264  1.133]\n",
-      " [ 1.614 14.056  0.     7.445 -0.275]\n",
-      " [ 0.     0.     0.     0.     0.   ]\n",
-      " [-1.264  7.445  0.     7.223 -1.102]\n",
-      " [ 1.133 -0.275  0.    -1.102  0.447]]\n",
-      "Bordered_hessian:\n",
-      "[[ 3.4    1.614  0.    -1.264  1.133 -1.     0.     0.     0.     0.     1.     3.755]\n",
-      " [ 1.614 14.056  0.     7.445 -0.275  0.    -1.     0.     0.     0.     1.     3.014]\n",
-      " [ 0.     0.     0.     0.     0.     0.     0.    -1.     0.     0.     1.     0.   ]\n",
-      " [-1.264  7.445  0.     7.223 -1.102  0.     0.     0.    -1.     0.     1.     7.396]\n",
-      " [ 1.133 -0.275  0.    -1.102  0.447  0.     0.     0.     0.    -1.     1.     1.676]\n",
-      " [ 1.     1.     1.     1.     1.     0.     0.     0.     0.     0.     0.     0.   ]\n",
-      " [ 3.755  3.014  0.     7.396  1.676  0.     0.     0.     0.     0.     0.     0.   ]]\n",
-      "----------------------------------------------------------------------------------------------------\n",
-      "len of H_matrices : 278256\n",
-      "Structure of H_matrices : \n",
-      "(array([[ 3.4  ,  1.614,  0.   , -1.264,  1.133, -1.   ,  0.   ,  0.   ,  0.   ,  0.   ,  1.   ,  3.755],\n",
-      "       [ 1.614, 14.056,  0.   ,  7.445, -0.275,  0.   , -1.   ,  0.   ,  0.   ,  0.   ,  1.   ,  3.014],\n",
-      "       [ 0.   ,  0.   ,  0.   ,  0.   ,  0.   ,  0.   ,  0.   , -1.   ,  0.   ,  0.   ,  1.   ,  0.   ],\n",
-      "       [-1.264,  7.445,  0.   ,  7.223, -1.102,  0.   ,  0.   ,  0.   , -1.   ,  0.   ,  1.   ,  7.396],\n",
-      "       [ 1.133, -0.275,  0.   , -1.102,  0.447,  0.   ,  0.   ,  0.   ,  0.   , -1.   ,  1.   ,  1.676],\n",
-      "       [ 1.   ,  1.   ,  1.   ,  1.   ,  1.   ,  0.   ,  0.   ,  0.   ,  0.   ,  0.   ,  0.   ,  0.   ],\n",
-      "       [ 3.755,  3.014,  0.   ,  7.396,  1.676,  0.   ,  0.   ,  0.   ,  0.   ,  0.   ,  0.   ,  0.   ]]),\n",
-      " array([[ 3.4  ,  1.614,  0.   , -1.264,  1.133],\n",
-      "       [ 1.614, 14.056,  0.   ,  7.445, -0.275],\n",
-      "       [ 0.   ,  0.   ,  0.   ,  0.   ,  0.   ],\n",
-      "       [-1.264,  7.445,  0.   ,  7.223, -1.102],\n",
-      "       [ 1.133, -0.275,  0.   , -1.102,  0.447]]))\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pprint\n",
     "ll = process_combination(('KTB', 'KBS', 'Cpaxt', 'SIRI', 'KCE'), dividend_yield_matrix, stocks)\n",
@@ -469,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -502,46 +427,17 @@
     "    \n",
     "    # Try to solve the reduced system\n",
     "    try:\n",
-    "        if np.linalg.det(H_reduced) > 1e-10: \n",
-    "            return None\n",
     "        x_reduced = np.linalg.solve(H_reduced, b)\n",
-    "        return (combination,covariance_matrix, ci_case, x_reduced, H, H_reduced, b)  if np.allclose(H_reduced @ x_reduced, b) else None\n",
+    "        return (combination,covariance_matrix, ci_case, x_reduced, H, H_reduced, b)\n",
     "    except np.linalg.LinAlgError:\n",
     "        return None  # Return None if there is an error"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Running the computation...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Processing tasks: 100%|██████████| 8904192/8904192 [16:44<00:00, 8868.04it/s] \n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Filtering out None results...\n",
-      "Successfully filtered out None results!\n",
-      "Filtering valid solutions... (lampda>=0, c>=0)\n",
-      "Total number of valid solutions: 52856\n",
-      "Saving valid solutions to ../out/raw_data/valid_solutions10Percent.pkl...\n",
-      "Successfully saved valid solutions!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pickle\n",
     "import os\n",
@@ -553,7 +449,7 @@
     "    with open(filename, 'rb') as f:\n",
     "        return pickle.load(f)\n",
     "    \n",
-    "solutions_file = '../out/raw_data/valid_solutions10Percent.pkl'\n",
+    "solutions_file = '../out/raw_data/valid_solutions10Percentv2.pkl'\n",
     "r = 10  # Required return of 10%\n",
     "valid_solutions = {}\n",
     "# Check if results file exists\n",
@@ -618,7 +514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -655,7 +551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -679,57 +575,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Combination : ('SAPPE', 'UNH', 'VZ', 'ENB', 'PTT')\n",
-      "Number of valid solutions :\n",
-      "[(array([[0.   ],\n",
-      "       [0.   ],\n",
-      "       [0.255],\n",
-      "       [0.745],\n",
-      "       [0.   ]]), 0.9868156601524832, (array([[ 0.968, -0.015, -0.907,  1.068, -0.44 ],\n",
-      "       [-0.015,  0.024,  0.012,  0.112,  0.053],\n",
-      "       [-0.907,  0.012,  1.028, -0.796,  0.212],\n",
-      "       [ 1.068,  0.112, -0.796,  2.18 , -0.296],\n",
-      "       [-0.44 ,  0.053,  0.212, -0.296,  1.494]]), (0, 0, 1, 1, 0), array([[ 0.255],\n",
-      "       [ 0.745],\n",
-      "       [ 1.907],\n",
-      "       [ 2.062],\n",
-      "       [ 0.755],\n",
-      "       [ 2.423],\n",
-      "       [-0.34 ]]), {'c3': 0.2551587621331539, 'c4': 0.7448412378668459, 'lambda1': 1.9069013496176577, 'lambda2': 2.0621780206635734, 'lambda5': 0.7552694721008626}, {'mu1': -0.33964798405382, 'mu2': 2.4226746934160195}))]\n",
-      "          0         1         2         3         4\n",
-      "0  0.968318 -0.014918 -0.906962  1.067971 -0.440070\n",
-      "1 -0.014918  0.023633  0.011845  0.112457  0.052812\n",
-      "2 -0.906962  0.011845  1.028219 -0.795885  0.211839\n",
-      "3  1.067971  0.112457 -0.795885  2.179898 -0.296384\n",
-      "4 -0.440070  0.052812  0.211839 -0.296384  1.493876\n",
-      "   0\n",
-      "0  0\n",
-      "1  0\n",
-      "2  1\n",
-      "3  1\n",
-      "4  0\n",
-      "          0\n",
-      "0  0.255159\n",
-      "1  0.744841\n",
-      "2  1.906901\n",
-      "3  2.062178\n",
-      "4  0.755269\n",
-      "5  2.422675\n",
-      "6 -0.339648\n",
-      "         c3        c4   lambda1   lambda2   lambda5\n",
-      "0  0.255159  0.744841  1.906901  2.062178  0.755269\n",
-      "        mu1       mu2\n",
-      "0 -0.339648  2.422675\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for combination, solution_list in valid_solutions_with_risk.items():\n",
     "    print(f\"Combination : {combination}\")\n",
@@ -746,95 +594,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "                          Combination  \\\n",
-      "0          (SAPPE, UNH, VZ, ENB, PTT)   \n",
-      "1           (SAPPE, UNH, VZ, ENB, UL)   \n",
-      "2          (SAPPE, UNH, VZ, ENB, KTB)   \n",
-      "3         (SAPPE, UNH, VZ, ENB, MSFT)   \n",
-      "4          (SAPPE, UNH, VZ, ENB, SAT)   \n",
-      "...                               ...   \n",
-      "52931   (ENB, SAT, META, Cpaxt, AMZN)   \n",
-      "52932  (ENB, TSMC, META, Cpaxt, AMZN)   \n",
-      "52933   (ENB, SCB, META, Cpaxt, AMZN)   \n",
-      "52934   (ENB, JPM, META, Cpaxt, AMZN)   \n",
-      "52935  (ENB, Visa, META, Cpaxt, AMZN)   \n",
-      "\n",
-      "                                                  myPort      Risk  \\\n",
-      "0      [0.0, 0.0, 0.2551587621331539, 0.7448412378668...  0.986816   \n",
-      "1      [0.0, 0.0, 0.2551587621331539, 0.7448412378668...  0.986816   \n",
-      "2      [0.0, 0.0, 0.2551587621331539, 0.7448412378668...  0.986816   \n",
-      "3      [0.0, 0.0, 0.2551587621331539, 0.7448412378668...  0.986816   \n",
-      "4      [0.0, 0.0, 0.2551587621331539, 0.7448412378668...  0.986816   \n",
-      "...                                                  ...       ...   \n",
-      "52931  [0.8521801092364881, 0.05099644279223624, 0.0,...  1.299316   \n",
-      "52932  [0.8623872387387799, 0.13761276126122007, 0.0,...  1.268317   \n",
-      "52933  [0.7574862481422459, 0.24251375185775403, 0.0,...  1.076474   \n",
-      "52934  [0.8367985219536785, 0.16320147804632149, 0.0,...  1.282930   \n",
-      "52935  [0.8837461272741298, 0.0, 0.0, 0.1162538727258...  1.304805   \n",
-      "\n",
-      "                                       Covariance Matrix          ci_case  \\\n",
-      "0      [[0.9683183910391886, -0.014918337430515672, -...  (0, 0, 1, 1, 0)   \n",
-      "1      [[0.9683183910391886, -0.014918337430515672, -...  (0, 0, 1, 1, 0)   \n",
-      "2      [[0.9683183910391886, -0.014918337430515672, -...  (0, 0, 1, 1, 0)   \n",
-      "3      [[0.9683183910391886, -0.014918337430515672, -...  (0, 0, 1, 1, 0)   \n",
-      "4      [[0.9683183910391886, -0.014918337430515672, -...  (0, 0, 1, 1, 0)   \n",
-      "...                                                  ...              ...   \n",
-      "52931  [[2.179897854198289, 1.03215787280695, 0.0, 0....  (1, 1, 0, 1, 0)   \n",
-      "52932  [[2.179897854198289, -0.09295592476147115, 0.0...  (1, 1, 0, 0, 0)   \n",
-      "52933  [[2.179897854198289, -1.132692966318054, 0.0, ...  (1, 1, 0, 0, 0)   \n",
-      "52934  [[2.179897854198289, 0.41758840431356237, 0.0,...  (1, 1, 0, 0, 0)   \n",
-      "52935  [[2.179897854198289, 0.150600261281662, 0.0, 0...  (1, 0, 0, 1, 0)   \n",
-      "\n",
-      "                                               x_reduced  \\\n",
-      "0      [[0.2551587621331539], [0.7448412378668459], [...   \n",
-      "1      [[0.2551587621331539], [0.7448412378668459], [...   \n",
-      "2      [[0.2551587621331539], [0.7448412378668459], [...   \n",
-      "3      [[0.2551587621331539], [0.7448412378668459], [...   \n",
-      "4      [[0.2551587621331539], [0.7448412378668459], [...   \n",
-      "...                                                  ...   \n",
-      "52931  [[0.8521801092364881], [0.05099644279223624], ...   \n",
-      "52932  [[0.8623872387387799], [0.13761276126122007], ...   \n",
-      "52933  [[0.7574862481422459], [0.24251375185775403], ...   \n",
-      "52934  [[0.8367985219536785], [0.16320147804632149], ...   \n",
-      "52935  [[0.8837461272741298], [0.11625387272587018], ...   \n",
-      "\n",
-      "                                                 checker  \\\n",
-      "0      {'c3': 0.2551587621331539, 'c4': 0.74484123786...   \n",
-      "1      {'c3': 0.2551587621331539, 'c4': 0.74484123786...   \n",
-      "2      {'c3': 0.2551587621331539, 'c4': 0.74484123786...   \n",
-      "3      {'c3': 0.2551587621331539, 'c4': 0.74484123786...   \n",
-      "4      {'c3': 0.2551587621331539, 'c4': 0.74484123786...   \n",
-      "...                                                  ...   \n",
-      "52931  {'c1': 0.8521801092364881, 'c2': 0.05099644279...   \n",
-      "52932  {'c1': 0.8623872387387799, 'c2': 0.13761276126...   \n",
-      "52933  {'c1': 0.7574862481422459, 'c2': 0.24251375185...   \n",
-      "52934  {'c1': 0.8367985219536785, 'c2': 0.16320147804...   \n",
-      "52935  {'c1': 0.8837461272741298, 'c4': 0.11625387272...   \n",
-      "\n",
-      "                                               mu_values  \n",
-      "0      {'mu1': -0.33964798405382, 'mu2': 2.4226746934...  \n",
-      "1      {'mu1': -0.33964798405382, 'mu2': 2.4226746934...  \n",
-      "2      {'mu1': -0.33964798405382, 'mu2': 2.4226746934...  \n",
-      "3      {'mu1': -0.33964798405382, 'mu2': 2.4226746934...  \n",
-      "4      {'mu1': -0.33964798405382, 'mu2': 2.4226746934...  \n",
-      "...                                                  ...  \n",
-      "52931  {'mu1': -0.16882219691738426, 'mu2': 9.6438489...  \n",
-      "52932  {'mu1': -0.196504437897077, 'mu2': 0.356415281...  \n",
-      "52933  {'mu1': -0.16553198634383956, 'mu2': 0.4965226...  \n",
-      "52934  {'mu1': -0.1872933341823269, 'mu2': 0.22702516...  \n",
-      "52935           {'mu1': -0.1702515957480638, 'mu2': 0.0}  \n",
-      "\n",
-      "[52936 rows x 8 columns]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -851,9 +613,24 @@
     "        # Convert myPort to numpy array\n",
     "        myPort_array = np.array([myPort['c1'], myPort['c2'], myPort['c3'], myPort['c4'], myPort['c5']]).reshape(-1, 1)\n",
     "        risk = np.sqrt(myPort_array.T @ covariance_matrix @ myPort_array)\n",
+    "        # if combination==('ENB', 'AVGO', 'SIRI', 'ORI', 'ICHI'):\n",
+    "        #     sadas = myPort_array.T @ covariance_matrix\n",
+    "        #     print(sadas)\n",
+    "        #     print(sadas @ myPort_array)\n",
+    "        #     print(myPort_array.T @ covariance_matrix@ myPort_array)\n",
+    "        #     print(f\"Combination : {combination}\")\n",
+    "        #     print(f\"Risk : {risk.item()}\")\n",
+    "        #     print(f\"myPort : {myPort_array.flatten()}\")\n",
+    "        #     print(f\"covariance_matrix : {covariance_matrix}\")\n",
+    "        #     print(f\"ci_case : {ci_case}\")\n",
+    "        #     print(f\"x_reduced : {x_reduced}\")\n",
+    "        #     print(f\"checker : {checker}\")\n",
+    "        #     print(f\"mu_values : {mu_values}\")\n",
+    "        #     print(f\"{'-' * 100}\")\n",
     "        \n",
-    "        # Append the combination, myPort, and risk.item() to the data list\n",
-    "        data.append((combination, myPort_array.flatten(), risk.item(),covariance_matrix,ci_case,x_reduced,checker,mu_values))  # Flatten myPort for better representation\n",
+    "        # if sum of risk equal to 1 accept the solution\n",
+    "        if risk.item() -1 <= 0.5:\n",
+    "            data.append((combination, myPort_array.flatten(), risk.item(),covariance_matrix,ci_case,x_reduced,checker,mu_values))\n",
     "\n",
     "# Create a DataFrame\n",
     "df_valid_solutions = pd.DataFrame(data, columns=['Combination', 'myPort', 'Risk', 'Covariance Matrix', 'ci_case', 'x_reduced', 'checker', 'mu_values'])\n",
@@ -864,7 +641,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
